fixes margin on small screens

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,11 @@
     margin-top: 10px;
     margin-bottom: 10px;
   }
+
+  .projects-container{
+    color: black;
+    margin: 100px 0px 0px 0px;
+  }
 }
 
 body {
